fixing scrollbar issue

--- a/src/components/SiteLayout/SiteLayout.module.scss
+++ b/src/components/SiteLayout/SiteLayout.module.scss
@@ -1,5 +1,6 @@
 .site {
   height: 100%;
+  overflow: auto;
 }
 
 .siteShadow {
