--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -18,4 +18,5 @@
 
 body {
   background: #000;
+  overflow: hidden;
 }
